Fix navbar on mobile (make logo smaller (also rework the CSS structure)
Closes https://github.com/I-had-a-bad-idea/Work/issues/96

--- a/internal/assets/static/css/style.css
+++ b/internal/assets/static/css/style.css
@@ -1,6 +1,6 @@
 
 :root{
-    font-size: small;
+    font-size: medium;
     --primary:#0F1B3D;
     --accent:#FFB400;
     --bg:#F8F9FC;
@@ -9,9 +9,21 @@
     --text:#5F6982;
 }
 
-@media (min-width: 768px) {
+.logo{
+    height:80px;
+}
+
+@media (max-width: 768px) {
     :root {
-        font-size: medium;
+        font-size: small;
+    }
+    .logo{
+        height:40px;
+    }
+    .nav-right {
+        display: flex;
+        justify-content: flex-end;
+        gap: 6;
     }
 }
 
@@ -80,9 +92,6 @@ h3 {
     margin-top: 1rem;
 }
 
-.logo{
-    height:80px;
-}
 
 .btn {
     padding: 7.5px 12px;
